--- a/app/views/layouts/registrations/new.html.erb
+++ b/app/views/layouts/registrations/new.html.erb
@@ -1,6 +1,5 @@
 <%= render "shared/second-header"%>
 
-
 <%= form_with class: 'registration-main', local: true do |f| %>
 <div class='form-wrap'>
   <div class='form-header'>
@@ -78,7 +77,7 @@
     <div class='input-birth-wrap'>
       <%= raw sprintf(
                   f.date_select(
-                    :bithday,
+                    :birthday,
                     class:'select-birth',
                     id:"birth-date",
                     use_month_numbers: true,
