--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,9 +133,11 @@
           <%= link_to item_path(item) do %>
             <div class='item-img-content'>
               <%= image_tag item.image, class: "item-img" if item.image.attached?%>
-              <%# <div class='sold-out'>
-                <span>Sold Out!!</span>
-              </div> %>
+              <% if item.item_transaction != nil %>
+                <div class='sold-out'>
+                  <span>Sold Out!!</span>
+                </div>
+              <% end %>
             </div>
             <div class='item-info'>
               <h3 class='item-name'>
