--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,9 +9,11 @@
     <div class='item-img-content'>
       <%= image_tag @item.image,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outの表示をしましょう。 %>
-      <%# <div class='sold-out'>
-        <span>Sold Out!!</span>
-      </div> %>
+        <% if @item.item_transaction != nil %>
+          <div class='sold-out'>
+            <span>Sold Out!!</span>
+          </div>
+        <% end %>
       <%# //商品が売れている場合は、sold outの表示をしましょう。 %>
     </div>
     <div class="item-price-box">
@@ -30,7 +32,9 @@
     <% end %>
     <% if user_signed_in? && current_user.id != @item.user_id %>
       <%# 商品が売れていない場合はこちらを表示しましょう %>
-      <%= link_to '購入画面に進む', item_transactions_path(@item) ,class:"item-red-btn"%>
+      <% if @item.item_transaction == nil %>
+        <%= link_to '購入画面に進む', item_transactions_path(@item) ,class:"item-red-btn"%>
+      <% end %>
       <%# //商品が売れていない場合はこちらを表示しましょう %>
     <% end %>
 
