--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -88,6 +88,11 @@
 .click-upload>p {
   margin-bottom: 15px;
 }
+
+.click-upload img{
+  width: 100%;
+  height: auto;
+}
 /* /出品画像 */
 
 /* 商品名と商品説明 */
