--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -7,7 +7,10 @@
     <h2 class="items-sell-title">商品の情報を入力</h2>
     <%= form_with model: @item, local: true do |f| %>
 
+     <% if @item.errors.any?%>
     <%= render 'shared/error_messages', model: f.object %>
+    <% end %>
+    <%# render 'shared/error_messages', model: f.object %>
 
     <%# 出品画像 %>
     <div class="img-upload">
@@ -19,8 +22,14 @@
         <p>
           クリックしてファイルをアップロード
         </p>
-        <%= f.file_field :image, id:"item-image" %>
+        <%= f.file_field :images, name: 'item[images][]', id:"item-image" %>
         <div id="image-list"></div>
+
+          <% @item.images.each do |image| %>
+            <%= image_tag image, class: 'images' %>
+          <% end %>
+
+
       </div>
     </div>
     <%# /出品画像 %>
