--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,4 +1,6 @@
 <%= render "shared/second-header"%>
+<% breadcrumb :item_purchase , @item%>
+<%= breadcrumbs separator: " &rsaquo; " %>  
 
 <div class='transaction-contents'>
   <div class='transaction-main'>
@@ -7,7 +9,10 @@
     </h1>
     <%# 購入内容の表示 %>
     <div class='buy-item-info'>
-      <%= image_tag @item.image, class: 'buy-item-img' %>
+      <% @item.images.each do |image| %>
+        <%= image_tag image, class: 'buy-item-img' %>
+      <% end %>
+      <%# <%= image_tag @item.images, class: 'buy-item-img' %>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
           <%= @item.explanation %>
